# bispo.eti.br

./: .gitignore  HOW-TO-PLAY  README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  scripts.js  styles.css
content/: index.md
output/: archives.html  authors.html  categories.html  index.html  tags.html
output/feeds/: all.atom.xml
pelican-themes/pelican-blue/templates/: base.html  index.html
themes/pelican-blue/templates/: index.html
