[tool.poetry]
name = "bispo.eti.br"
version = "0.1.0"
description = "Personal website"
authors = ["Alessandro Bispo dos Santos"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["Markdown"], version = "^4.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
